force-app/main/default/objects/RELEASE_H__c/RELEASE_H__c.object-meta.xml
<CustomObject>
    <label>출고내역</label>
    <nameField>
        <displayFormat>RH-{00000000}</displayFormat>
        <label>SFDC Key</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>