force-app/main/default/objects/RELEASE_H__c/fields/IFDATE__c.field-meta.xml
<CustomField>
    <fullName>IFDATE__c</fullName>
    <label>수신일</label>
    <type>Date</type>
</CustomField>