force-app/main/default/objects/RELEASE_H__c/fields/SND_YN__c.field-meta.xml
<CustomField>
    <fullName>SND_YN__c</fullName>
    <label>전송성공여부 S/E</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>