force-app/main/default/objects/RELEASE_H__c/fields/XDATS__c.field-meta.xml
<CustomField>
    <fullName>XDATS__c</fullName>
    <label>수신날짜 (YYYYMMDD)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>