force-app/main/default/objects/RELEASE_H__c/fields/XTIMS__c.field-meta.xml
<CustomField>
    <fullName>XTIMS__c</fullName>
    <label>수신시간 (HHMMSS)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>