force-app/main/default/objects/RELEASE_H__c/validationRules/ProhibitConfirmReleaseChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ProhibitConfirmReleaseChange</fullName>
    <active>false</active>
    <description>출고확정 후 변경방지 (Admin은 변경가능)</description>
    <errorConditionFormula>AND (
   ISPICKVAL(PRIORVALUE(CONFIRM__c), &quot;Y&quot;),
   NOT(
      OR(
         $Profile.Name = &quot;시스템 관리자&quot;,
         $Profile.Name = &quot;System Administrator&quot;
      )
   )
)</errorConditionFormula>
    <errorMessage>확정된 출고내역은 변경할 수 없습니다.</errorMessage>
</ValidationRule>