force-app/main/default/objects/RELEASE_H__c/listViews/RELEASE_CONFIRM.listView-meta.xml
<ListView>
    <fullName>RELEASE_CONFIRM</fullName>
    <columns>fm_EBELN_link__c</columns>
    <columns>CHECK__c</columns>
    <columns>CONFIRM__c</columns>
    <columns>xmsgs__c</columns>
    <columns>IFDATE__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONFIRM__c</field>
        <operation>equals</operation>
        <value>Y</value>
    </filters>
    <label>확정 출고내역</label>
</ListView>