force-app/main/default/objects/RELEASE_H__c/listViews/RELEASE_ENTIRE.listView-meta.xml
<ListView>
    <fullName>RELEASE_ENTIRE</fullName>
    <columns>fm_EBELN_link__c</columns>
    <columns>CHECK__c</columns>
    <columns>CONFIRM__c</columns>
    <columns>xmsgs__c</columns>
    <columns>IFDATE__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>전체 출고내역</label>
</ListView>